# cgm-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE_DESKTOP_CONFIG.md  Dockerfile  FINAL_GPU_SUMMARY.md  GPU_ACCELERATION_ANALYSIS.md  GPU_IMPLEMENTATION_SUMMARY.md  GPU_PLATFORM_SUPPORT.md  LICENSE  MCP_FIX_DOCUMENTATION.md  MULTILANG_SUPPORT.md  OPTIMIZATION_SUMMARY.md  README.md  SETUP_COMPLETE.md  TODO.md  check_gpu_dependencies.py  config-cgm-mcp-modelless.json  config-cgm-mcp.json  config.json  config.lmstudio.json  config.local.json  docker-entrypoint.sh  final_verification.py  gpu_acceleration_poc.py  gpu_verification.py  main.py  main_modelless.py  main_modelless_optimized.py  minimal_test.py  performance_demo.py  project_status_check.py  pyproject.toml  quick_test.py  requirements.txt  simple_test.py  test_gpu_acceleration.py  test_issue_resolution.py  test_mcp_client_simulation.py  test_mcp_comprehensive.py  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish-docker.yml
.openhands/: TASKS.md  setup.sh
.openhands/microagents/: repo.md
docs/: AGENT_TOOLING.md  ARCHITECTURE.md  AUGMENT_INTEGRATION.md  CURSOR_INTEGRATION.md  LLM_TOOLING.md  MODELLESS_INTEGRATION.md  MODEL_RECOMMENDATIONS.md
examples/: example_usage.py  local_model_example.py  modelless_example.py
scripts/: install_cuda_stack.py  mcp_launcher.py  run_mcp.sh  setup.sh  start_local.sh  start_modelless.sh
src/cgm_mcp/: __init__.py  install_cuda_stack.py  models.py  server.py  server_modelless.py
src/cgm_mcp/components/: __init__.py  graph_builder.py  reader.py  reranker.py  retriever.py  rewriter.py
src/cgm_mcp/core/: analyzer.py  analyzer_optimized.py  gpu_accelerator.py  gpu_enhanced_analyzer.py
src/cgm_mcp/utils/: __init__.py  config.py  llm_client.py
tests/: test_basic.py  test_components.py
